--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 淘宝搜索|Quadro中国|查看商品<br>
+              <div class="taobao"><span>https://s.click.taobao.com/8PqiIrs</span><br /><button
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 下单购买商品，备注|吞金兽驯兽师|，先不付款<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
@@ -279,7 +281,7 @@
             <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上<br>请选择1m可调节款</b></div>
             <img src="4dangang.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/h2A8Jrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <div style="font-size:1.2em; "><b>追求质感的可以选择Avadar的木吊环</b></div>
             <img src="5dh.webp" style="width:40%" />
         </div>
@@ -289,35 +291,35 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>八字环平替魔术贴</b></div>
             <div style="font-size:1.2em; "><b>选5cm宽50cm长</b></div>
             <div class="taobao"><span>https://s.click.taobao.com/el94Jrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替多轮轮胎</b></div>
             <div style="font-size:1.2em; "><b>选F款，比原版的要薄但是包附面积更大，可以在室外保护多轮不被磨损</b></div>
             <img src="6lt.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/GgT0Jrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
             <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/e7nJ5qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
             <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/q5IJ5qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
             <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/nzrI5qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>成品爬网</b></div>
@@ -328,7 +330,7 @@
             <img src="5wang1.webp" style="display:inline-block;width:30%" />
             <img src="5wang2.webp" style="display:inline-block;width:30%" />
             <div class="taobao"><span>https://s.click.taobao.com/V6szIrs</span><br /><button
-                    onclick="clip(this)">复制淘链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制淘链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab6-->
 
@@ -336,7 +338,7 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>布艺</b></div>
             <div style="font-size:1.2em; "><b>|xhs@娜娜和宝平欧巴|和|xhs@吉祥如意小裁缝|家都有布艺，娜娜家的主打可爱选择的布料都比较卡通，小裁缝家主打厚实。小裁缝家还可以买到全包围版蹦床布。还可以选择艾亚教具，老板做产品也很用心。</b></div>
            <div class="taobao"><span>https://s.click.taobao.com/OFHxIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>  
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>  
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>海洋球</b></div>
@@ -354,7 +356,7 @@
             <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/CN2G5qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             要质量好的可以选择Avadar的布秋千
             <img src="8qq.webp" style="width:50%" />
             <br>
@@ -363,14 +365,14 @@
             <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <img src="7qiuqian3.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/jvQzIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
             <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/3IMyIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab8-->
 
@@ -379,13 +381,13 @@
             <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/BcGvIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/Xu5vIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab9-->
 
@@ -394,14 +396,14 @@
             <div style="font-size:1.2em; "><b>宜家Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/VZTsIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配长方形感官盆</b></div>
             <div style="font-size:1.2em; "><b>宜家SAMLA 55升可以卡在35+35x25+20cm的框架里，可以做更大的感观盆 （20管可以在淘宝Quadro中国买到）</b></div>
             <img src="9penzi2.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/s3orIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>作为可以放在架子上的收纳，更推荐以下两种</b></div>
@@ -409,14 +411,14 @@
             <img src="9shouna3.webp" style="display:inline-block;width:50%" />
             <img src="9shouna4.webp" style="display:inline-block;width:50%" />
             <div class="taobao"><span>https://s.click.taobao.com/DVj85qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%" />
             <img src="9shouna2.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/rpj75qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab10-->
 
@@ -424,14 +426,14 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>亚克力板</b></div>
             <div style="font-size:1.2em; "><b>可以淘宝搜索【艾亚教具】【亚克力球直销】或者【百川亚克力】，其中【艾亚教具】透明度最好，洞洞板细节处理最到位圆洞完全不划手。【百川亚克力】便宜些但是容易出错，海外党慎选</b></div>
             <div class="taobao"><span>https://s.click.taobao.com/OFHxIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>    
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>    
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
             <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/vPD95qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab11-->
 
@@ -440,28 +442,28 @@
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是85元,8根105元</b></div>
             <img src="11lvguan.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/3kDqIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>管塞</b></div>
             <div style="font-size:1.2em; "><b>请选择A=43.5mm，直接备注颜色就可以经典色的选红绿蓝黄，home色的可以选灰白黑</b></div>
             <img src="11sai1.webp" style="width:40%" />
             <div class="taobao"><span>http://e.tb.cn/h.TU44vO7E1FgYFD2?tk=EDAk3CD2r6d </span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制淘口令，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头套</b></div>
             <div style="font-size:1.2em; "><b>请选择40mm无边款可以给多出来的接头和斜放的接头支撑，40mm圆形可以给平面垂直支撑的</b></div>
             <img src="11sai2.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/of3pIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>接头孔塞</b></div>
             <div style="font-size:1.2em; "><b>请选择A=32.6mm，可以固定27mm直径的铝管或木棍在接头上不易滑动</b></div>
             <img src="11sai3.webp" style="width:40%" />
             <div class="taobao"><span>http://e.tb.cn/h.TU44vO7E1FgYFD2?tk=EDAk3CD2r6d</span><br /><button
-                    onclick="clip(this)">复制淘口令，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制淘口令，打开淘宝App粘贴至搜索栏搜索</button></div>
 
             
             
@@ -490,25 +492,25 @@
             <img src="12pj1.webp" style="display:inline-block;width:18%" />
             <img src="12pj2.webp" style="display:inline-block;width:18%" />
             <div class="taobao"><span>https://s.click.taobao.com/cwH75qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>适配|哎哟妈呀|洞洞板的配件</b></div>
             <img src="12pj3.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/u5d65qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/AhS65qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.2em; "><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
             <img src="12dongdongban2.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/Tg7oIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab13-->
 
@@ -523,14 +525,14 @@
             <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
             <img src="13ditan1.webp" style="width:40%" />
             <div class="taobao"><span>https://s.click.taobao.com/F8coIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
             <div style="font-size:1.2em; "><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
             <img src="13ditan3.webp" style="width:40%" />
             <div class="taobao"><span>【https://s.click.taobao.com/yw6oIrs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App查看商品</button></div>
+                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
         </div>
         <!--end of tab14-->
 
