--- a/index.html
+++ b/index.html
@@ -202,21 +202,22 @@
     <div class="tab-btn-area">
         <div class="tab-btn active">选品01<br>德国原版quadro</div>
         <div class="tab-btn">选品02<br>国产元老世纪童年</div>
-        <div class="tab-btn">选品03<br>mini搭搭乐</div>
-        <div class="tab-btn">选品04<br>国产过河石</div>
-        <div class="tab-btn">选品05<br>吊环</div>
-        <div class="tab-btn">选品06<br>绳网</div>
-        <div class="tab-btn">选品07<br>布套及相关</div>
-        <div class="tab-btn">选品08<br>秋千</div>
-        <div class="tab-btn">选品09<br>大颗粒积木板</div>
-        <div class="tab-btn">选品10<br>游戏/收纳盒</div>
-        <div class="tab-btn">选品11<br>亚克力相关</div>
-        <div class="tab-btn">选品12<br>铝管/堵头</div>
-        <div class="tab-btn">选品13<br>金属洞洞板</div>
-        <div class="tab-btn">选品14<br>地垫</div>
-        <div class="tab-btn">选品15<br>配件收纳</div>
-        <div class="tab-btn">选品16<br>彩虹门</div>
-        <div class="tab-btn">选品17<br>感官垫</div>
+        <div class="tab-btn">选品03<br>磁力片</div>
+        <div class="tab-btn">选品04<br>mini搭搭乐</div>
+        <div class="tab-btn">选品05<br>国产过河石</div>
+        <div class="tab-btn">选品06<br>吊环</div>
+        <div class="tab-btn">选品07<br>绳网</div>
+        <div class="tab-btn">选品08<br>布套及相关</div>
+        <div class="tab-btn">选品09<br>秋千</div>
+        <div class="tab-btn">选品10<br>大颗粒积木板</div>
+        <div class="tab-btn">选品11<br>游戏/收纳盒</div>
+        <div class="tab-btn">选品12<br>亚克力相关</div>
+        <div class="tab-btn">选品13<br>铝管/堵头</div>
+        <div class="tab-btn">选品14<br>金属洞洞板</div>
+        <div class="tab-btn">选品15<br>地垫</div>
+        <div class="tab-btn">选品16<br>配件收纳</div>
+        <div class="tab-btn">选品17<br>彩虹门</div>
+        <div class="tab-btn">选品18<br>感官垫</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -263,6 +264,22 @@
         </div>
         <!--end of tab2-->
 
+        <div class="tab-page">
+            <div style="font-size:1.2em; "><b>澳洲CONNETIX</b></div>
+            <img src="3cili (0).webp" style="width:50%" />
+            <div style="font-size:1.2em; "><b>性价比DUDUBAO</b></div>
+            <img src="3cili (01).webp" style="width:50%" />
+            <div style="font-size:1.2em; "><b>与众不同的Totstuff</b></div>
+            <img src="3cili (02).webp" style="width:50%" />
+            <div style="font-size:1.2em; "><b>今聚MNTL</b></div>
+            <img src="3cili (3).webp" style="width:50%" />
+            <div style="font-size:1.2em; "><b>Giromag</b></div>
+            <img src="3cili (2).webp" style="width:50%" />
+            <div style="font-size:1.2em; "><b>Mideer</b></div>
+            <img src="3cili (1).webp" style="width:50%" />
+        </div>
+        <!--end of tab3-->
+        
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>艾亚Mini搭搭乐，复刻已经停产的mini quadro。管子接头与原版适配，误差小。</b></div>
             <img src="3mini.webp" style="width:50%" />
