--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>澳洲CONNETIX</b></div>
             <img src="3cili (0).webp" style="width:50%" />
-            <div style="font-size:1.2em; "><b>性价比DUDUBAO</b></div>
+            <div style="font-size:1.2em; "><b>高性价比DUDUBAO</b></div>
             <img src="3cili (01).webp" style="width:50%" />
             <div style="font-size:1.2em; "><b>与众不同的Totstuff</b></div>
             <img src="3cili (02).webp" style="width:50%" />
