--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>驯兽师羊毛厂</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6065671789763206"
      crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
     <style>
         body {
             font-size: 24px;
@@ -225,6 +226,7 @@
         <div class="tab-btn">选品17<br>配件收纳</div>
         <div class="tab-btn">选品18<br>彩虹门</div>
         <div class="tab-btn">选品19<br>感官垫</div>
+        <div class="tab-btn"> <i class="fas fa-tools"></i>一些没用的小工具</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
