--- a/compressPDF/index.html
+++ b/compressPDF/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PDF 压缩工具</title>
-    <script type="module" src="pdf.min.mjs"></script>
+    <script src="pdf.min.js"></script>
 </head>
 <body>
     <h2>PDF 压缩工具</h2>
