--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
 
 
         <div class="tab-page">
+            <div style="font-size:1.2em; "><b>Magnatiles迷你磁力片</b></div>
+            <img data-src="4cili.webp" style="width:50%" />
             <div style="font-size:1.2em; "><b>澳洲CONNETIX</b></div>
             <img data-src="3cili (0).webp" style="width:50%" />
             <div style="font-size:1.2em; "><b>高性价比DUDUBAO</b></div>
