--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         <div class="tab-btn">选品18<br>彩虹门</div>
         <div class="tab-btn">选品19<br>感官垫</div>
         <div class="tab-btn" style="color:rgb(112,173,71)"> 🛠️<br><b>没用的小工具</b></div>
+        <div class="tab-btn" style="color:rgb(112,173,71)"> 📚<br><b>有用的资料</b></div>
 
     </div>
     <div class="tab-page-area">
