--- a/index.html
+++ b/index.html
@@ -613,8 +613,11 @@
         <!--end of tab19-->
 
         <div class="tab-page">
+        <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩具小工具</b><br>
             <a href='smartGames/iqTwins' target='_blank'>SmartGames IQ Twins 双子星 解题工具</a><br>
-            <a href='tools/imageFormat' target='_blank'>图片压缩及格式转换</a>
+       <br> 
+        <div style="font-size:1.5em; color:rgb(112,173,71)"><b>日常小工具</b><br>
+            <a href='tools/imageFormat' target='_blank'>图片压缩及格式转换</a><br>
         </div>
         <!--end of tab20-->
 
@@ -634,6 +637,11 @@
             </div>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法指南</b></div>
+            <a href='https://stapelstein.de/en/pages/basic-functions?srsltid=AfmBOorbexa8fANZYLR-TPS5el0_58Ze3SdJ7u7nkhkuBKKCL5TZcwG7' target='_blank'>过河石的十种玩法</a><br>
+            <a href='https://www.grimms.eu/en/magazin/grimm-s-x-stapelstein-play-role-build' target='_blank'>过河石积木板玩法</a><br>
+            <a href='https://connetixtiles.com/free-printable-connetix-magnetic-tile-cards/?srsltid=AfmBOooZjUlkAfKwQ26NqAkzc2l164nuVlBT4jAM_djhyv71Fj6lL6j1' target='_blank'>磁力片玩法资源（Connetix）</a><br>
+            <a href='https://www.magnatiles.com/free-resources/?srsltid=AfmBOor-9oh7zkX7GWgHTBsLyE21R00twZmERrvdH2BETMXWgulQfoZP' target='_blank'>磁力片玩法资源（Magnatiles）</a><br>
+            <a href='https://collecta.com.de/?page_id=383' target='_blank'>动物认知（CollectA产品书）</a><br>
           
         </div>
         <!--end of tab21-->
