--- a/index.html
+++ b/index.html
@@ -625,15 +625,16 @@
             <p>扫描二维码入群获取提取码</p>
             <img data-src="4weixin.webp" style="display:inline-block;width:15%" src="4weixin.webp"><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>音乐</b><br>
-              <a href='https://pan.baidu.com/s/1zBCrjsuQ2for4HpjhcLv8g' target='_blank'>中文儿童流行音乐</a><br>   /*tjsq*/
+              <a href='https://pan.baidu.com/s/1zBCrjsuQ2for4HpjhcLv8g' target='_blank'>中文儿童流行音乐</a><br> 
+               <!-- tjsq-->
             </div>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>故事</b><br>
-              <a href='https://pan.baidu.com/s/1D-vYGhm-ud1UwvHZUkHN_A' target='_blank'>低幼版西游记</a><br> /*tjsq*/
-              <a href='https://pan.baidu.com/s/1WpJt6TP_Hnkye4hSNrhT3g' target='_blank'>成语故事</a><br> /*tjsq*/
-              <a href='https://pan.baidu.com/s/1IiG7bXMtJLOxYZ71F4UbNQ' target='_blank'>安徒生童话</a><br> /*tjsq*/
-              <a href='https://pan.baidu.com/s/1G5ye9uq451ODD2T7jPnV3Q' target='_blank'>绘本故事</a><br> /*tjsq*/
-              <a href='https://pan.baidu.com/s/1yoopwx39cMmhjelsqYp0MA' target='_blank'>凯叔讲故事（含声律启蒙）</a><br> /*tjsq*/
+              <a href='https://pan.baidu.com/s/1D-vYGhm-ud1UwvHZUkHN_A' target='_blank'>低幼版西游记</a><br> 
+              <a href='https://pan.baidu.com/s/1WpJt6TP_Hnkye4hSNrhT3g' target='_blank'>成语故事</a><br> <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1IiG7bXMtJLOxYZ71F4UbNQ' target='_blank'>安徒生童话</a><br><!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1G5ye9uq451ODD2T7jPnV3Q' target='_blank'>绘本故事</a><br> <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1yoopwx39cMmhjelsqYp0MA' target='_blank'>凯叔讲故事（含声律启蒙）</a><br> <!-- tjsq-->
             </div>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法指南</b></div>
