--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <div class="tab-page">
         <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩具小工具</b><br>
             <a href='smartGames/iqTwins' target='_blank'>SmartGames IQ Twins 双子星 解题工具</a><br>
-       <br> 
+        </div>
         <div style="font-size:1.5em; color:rgb(112,173,71)"><b>日常小工具</b><br>
             <a href='tools/imageFormat' target='_blank'>图片压缩及格式转换</a><br>
         </div>
