--- a/index.html
+++ b/index.html
@@ -641,6 +641,8 @@
               <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1yoopwx39cMmhjelsqYp0MA' target='_blank'>凯叔讲故事（含声律启蒙）</a><br> 
               <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1XMAVoKwUqe3A-TpMvTszFw' target='_blank'>凯叔讲故事（含声律启蒙）</a><br> 
+              <!-- tjsq-->
             </div>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法指南</b></div>
