--- a/index.html
+++ b/index.html
@@ -641,13 +641,15 @@
 
             </div>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法互动指南</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法互动指南</b>
             <a href='https://stapelstein.de/en/pages/basic-functions?srsltid=AfmBOorbexa8fANZYLR-TPS5el0_58Ze3SdJ7u7nkhkuBKKCL5TZcwG7' target='_blank'>过河石的十种玩法</a><br>
             <a href='https://www.grimms.eu/en/magazin/grimm-s-x-stapelstein-play-role-build' target='_blank'>过河石积木板玩法</a><br>
             <a href='https://connetixtiles.com/free-printable-connetix-magnetic-tile-cards/?srsltid=AfmBOooZjUlkAfKwQ26NqAkzc2l164nuVlBT4jAM_djhyv71Fj6lL6j1' target='_blank'>磁力片玩法资源（Connetix）</a><br>
             <a href='https://www.magnatiles.com/free-resources/?srsltid=AfmBOor-9oh7zkX7GWgHTBsLyE21R00twZmERrvdH2BETMXWgulQfoZP' target='_blank'>磁力片玩法资源（Magnatiles）</a><br>
             <a href='https://supersimple.com/content-type/teaching/' target='_blank'>sss儿歌英语启蒙指导</a><br>
             
+          </div>
+          <br>
           <div style="font-size:1.5em; color:rgb(112,173,71)"><b>教育资料</b></div>
           <a href='https://collecta.com.de/?page_id=383' target='_blank'>动物认知（CollectA产品书）</a><br>
           <a href='https://supersimple.com/content-type/free-printables/' target='_blank'>sss填色游戏资料</a><br>
