--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
           <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩具小工具</b><br>
               <a href='smartGames/iqTwins' target='_blank'>SmartGames IQ Twins 双子星 解题工具</a><br>
           </div>
+           <br>
           <div style="font-size:1.5em; color:rgb(112,173,71)"><b>日常小工具</b><br>
               <a href='tools/imageFormat' target='_blank'>批量图片压缩及格式转换</a><br>
           </div>
@@ -623,7 +624,7 @@
         <!--end of tab20-->
 
         <div class="tab-page">
-            <p>扫描二维码入群获取提取码</p>
+            <p>扫描二维码入群获取网盘资料提取码</p>
             <img data-src="4weixin.webp" style="display:inline-block;width:15%" src="4weixin.webp"><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>音乐</b><br>
               <a href='https://pan.baidu.com/s/1zBCrjsuQ2for4HpjhcLv8g' target='_blank'>中文儿童流行音乐</a><br>                <!-- tjsq-->
