--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 
             </div>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法互动指南</b>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法互动指南</b><br>
             <a href='https://stapelstein.de/en/pages/basic-functions?srsltid=AfmBOorbexa8fANZYLR-TPS5el0_58Ze3SdJ7u7nkhkuBKKCL5TZcwG7' target='_blank'>过河石的十种玩法</a><br>
             <a href='https://www.grimms.eu/en/magazin/grimm-s-x-stapelstein-play-role-build' target='_blank'>过河石积木板玩法</a><br>
             <a href='https://connetixtiles.com/free-printable-connetix-magnetic-tile-cards/?srsltid=AfmBOooZjUlkAfKwQ26NqAkzc2l164nuVlBT4jAM_djhyv71Fj6lL6j1' target='_blank'>磁力片玩法资源（Connetix）</a><br>
@@ -651,7 +651,7 @@
             
           </div>
           <br>
-          <div style="font-size:1.5em; color:rgb(112,173,71)"><b>教育资料</b>
+          <div style="font-size:1.5em; color:rgb(112,173,71)"><b>教育资料</b><br>
           <a href='https://collecta.com.de/?page_id=383' target='_blank'>动物认知（CollectA产品书）</a><br>
           <a href='https://supersimple.com/content-type/free-printables/' target='_blank'>sss填色游戏资料</a><br>
           <a href='https://supersimple.com/content-type/crafts/' target='_blank'>sss手工游戏资料</a><br>
