--- a/index.html
+++ b/index.html
@@ -628,6 +628,8 @@
             <img data-src="4weixin.webp" style="display:inline-block;width:15%" src="4weixin.webp"><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>音乐</b><br>
               <a href='https://pan.baidu.com/s/1zBCrjsuQ2for4HpjhcLv8g' target='_blank'>中文儿童流行音乐</a><br>                <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1WGOJhTqoU3NQxX5HYh99rw' target='_blank'>The Singing Walrus</a><br>                <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1mUAptRJT7Jhj8Fwl8GamPg' target='_blank'>古力小超人</a><br>                <!-- tjsq-->
               <a href='https://supersimple.com/super-simple-songs/' target='_blank'>sss儿歌（可以按主题查询）</a><br>
 
             </div>
@@ -639,6 +641,7 @@
               <a href='https://pan.baidu.com/s/1G5ye9uq451ODD2T7jPnV3Q' target='_blank'>绘本故事</a><br>               <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1yoopwx39cMmhjelsqYp0MA' target='_blank'>凯叔讲故事（含声律启蒙）</a><br>               <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1XMAVoKwUqe3A-TpMvTszFw' target='_blank'>碰碰狐汽车故事合集</a><br>               <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/13RmZU7ahUExCSb7Z-xS3cg' target='_blank'>Kidsacdemcy太空主题（英语）</a><br>                <!-- tjsq-->
 
             </div>
             <br>
