--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
               <a href='https://pan.baidu.com/s/1WGOJhTqoU3NQxX5HYh99rw' target='_blank'>The Singing Walrus</a><br>                <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1mUAptRJT7Jhj8Fwl8GamPg' target='_blank'>古力小超人</a><br>                <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1nGBYgEVLwW0kkEwLzcaUSw' target='_blank'>粤语儿歌合集</a><br>                <!-- tjsq-->
-              <a href='https://pan.baidu.com/s/1CvhGx-hfGjDU4v-p59wq9A' target='_blank'>Thoma小火车英语歌</a><br>                <!-- tjsq-->
+              <a href='https://pan.baidu.com/s/1CvhGx-hfGjDU4v-p59wq9A' target='_blank'>Thomas小火车英语歌</a><br>                <!-- tjsq-->
               <a href='https://supersimple.com/super-simple-songs/' target='_blank'>sss儿歌（可以按主题查询）</a><br>
 
             </div>
