--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
             </div>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>故事</b><br>
+              <a href='https://pan.baidu.com/s/1v0EZ5LAMlrO_0lgEjEhGLg' target='_blank'>Bluey布鲁伊</a><br>                <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1D-vYGhm-ud1UwvHZUkHN_A' target='_blank'>低幼版西游记</a><br>               <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1WpJt6TP_Hnkye4hSNrhT3g' target='_blank'>成语故事</a><br>               <!-- tjsq-->
               <a href='https://pan.baidu.com/s/1IiG7bXMtJLOxYZ71F4UbNQ' target='_blank'>安徒生童话</a><br>              <!-- tjsq-->
