--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
         <!--end of tab2-->
 
        <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(235,165,54)"><b>预告：羊毛厂快团团将上线艾亚玩具的新模具pp材质攀爬架，安装更丝滑。</b> </div>  
+            <div style="font-size:1.5em; color:rgb(235,165,54)"><b>上新通知：羊毛厂快团团全网首发艾亚新版攀爬架pp材质攀爬架套装Transformer，适合小户型，不大但很全能多变，新版安装更丝滑。</b> </div>  
             艾亚家的周边非常丰富，特别推荐他家两个产品：1. 亚克力太空球透度非常好而且很厚实，2. 亚克力洞洞板，洞口做了特殊处理非常圆润绝对不会划破大人小孩细嫩的肌肤。
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂优惠</b></div>
-            <div style="font-size:1.2em; "><b>周边满两件9折，满4件8.5折 详情请见羊毛厂快团团</b></div>
+             <div style="font-size:1.2em; "><b>零件满减福利 详情请见羊毛厂快团团</b></div>
+            <img data-src="aiya2.webp" style="width:50%" />   
+             <div style="font-size:1.2em; "><b>周边满两件9折，满4件8.5折 详情请见羊毛厂快团团</b></div>
             <img data-src="aiya.webp" style="width:50%" />
             <hr>
             <p>入群|驯兽师羊毛厂|获得更多交流和搭建指引</p>
