--- a/index.html
+++ b/index.html
@@ -356,10 +356,14 @@
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
-            <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
+            <div style="font-size:1.2em;"><b>可以选择10mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img data-src="5miansheng.webp" style="width:40%" />
-            <div class="taobao"><span>https://s.click.taobao.com/nzrI5qs</span><br /><button
-                    onclick="clip(this)">复制链接，打开淘宝App粘贴至搜索栏搜索</button></div>
+            <div class="taobao"><span>https://mobile.yangkeduo.com/goods2.html?ps=snOgN6dDBv</span><br /><button
+                    onclick="clip(this)">复制链接，浏览器中打开</button></div>
+            <br>
+            <div style="font-size:1.2em;"><b>固定胶带</b></div>
+            <div class="taobao"><span>https://mobile.yangkeduo.com/goods2.html?ps=xcoimhZWaB</span><br /><button
+                    onclick="clip(this)">复制链接，浏览器中打开</button></div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>成品爬网</b></div>
