--- a/index.html
+++ b/index.html
@@ -292,14 +292,6 @@
             <img data-src="3cili (0).webp" style="width:50%" />
             <div style="font-size:1.2em; "><b>高性价比DUDUBAO</b></div>
             <img data-src="3cili (01).webp" style="width:50%" />
-            <div style="font-size:1.2em; "><b>与众不同的Totstuff</b></div>
-            <img data-src="3cili (02).webp" style="width:50%" />
-            <div style="font-size:1.2em; "><b>今聚MNTL</b></div>
-            <img data-src="3cili (3).webp" style="width:50%" />
-            <div style="font-size:1.2em; "><b>Giromag</b></div>
-            <img data-src="3cili (2).webp" style="width:50%" />
-            <div style="font-size:1.2em; "><b>Mideer</b></div>
-            <img data-src="3cili (1).webp" style="width:50%" />
         </div>
         <!--end of tab4-->
         
@@ -516,9 +508,11 @@
 
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>金属洞洞板</b></div>
-            <div style="font-size:1.2em; "><b>推荐用心在做产品的两个姐妹，她们的洞洞板各有千秋，大家根据自己的需求选择<br>羊毛厂会不定时组织团购活动，欢迎进群！</b></div>
-            <br>
-            <div style="font-size:1.2em; ">1|xhs@吉祥如意小裁缝|<br>特点是圆形通用孔洞、细磨砂质地、和Quadro大板尺寸完全一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。
+            
+           <div style="font-size:1.2em; "><b></b>羊毛厂姐妹家的金属洞洞板，羊毛厂优惠，价格实惠，售后不用担心</div>
+           <img data-src="13ddb.webp" style="width:50%" />  
+          <br>
+            <div style="font-size:1.2em; ">|xhs@吉祥如意小裁缝|<br>特点是圆形通用孔洞、细磨砂质地、和Quadro大板尺寸完全一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。
             </div>
             <img data-src="12dongdongban5.webp" style="width:40%" />
             <div class="taobao"><span>https://m.tb.cn/h.gncFHcL?tk=uhYx3fMk5OK HU904</span><br /><button
